Fix overlap with chat input

--- a/syntactic-front-end-redux/src/scss/theme/custom-components/_chat.scss
+++ b/syntactic-front-end-redux/src/scss/theme/custom-components/_chat.scss
@@ -1,4 +1,6 @@
 .chat-list {
+    margin-bottom: 7rem;
+    
     .message {
         .badge {
             padding: 1rem 1.5rem;
